Migrate from Java EE to Jakarta EE